--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
+<!-- Bootstrap Font Icon CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+<link rel="stylesheet" href="styles.css"></head>
+<body style="background-image">
+<div class="header">
+<p><img src="images\hiking_2.png"><img src="images\track.png"><img src="images\chopsticks.png"><img src="images\reading-book.png"></p>
+<P>California Uncovered: Hiking, Cycling, and Savoring SoCal</P>
+</div>
+<h1>In Progress</h1>
+<img src="images\img_ontario.jpg" style="max-width: 100%" >
+<hr>
+<sup id="fn1">1. Hiking icons created by Smashicons - Flaticon<a href="https://www.flaticon.com/free-icons/hiking" title="hiking icons">↩</a></sup>
+<sup id="fn2">2. Book icons created by Freepik - Flaticon<a href="https://www.flaticon.com/free-icons/book" title="book icons">↩</a></sup>
+<sup id="fn3">3. Chopsticks icons created by yukyik - Flaticon<a href="https://www.flaticon.com/free-icons/chopsticks" title="chopsticks icons">↩</a></sup>
+<sup id="fn4">4. Bicycle icons created by shmai - Flaticon<a href="https://www.flaticon.com/free-icons/bicycle" title="bicycle icons">↩</a></sup>
 </body>
 </html>
