--- a/index.html
+++ b/index.html
@@ -4,14 +4,45 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
 <!-- Bootstrap Font Icon CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+<!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="myScript.js"></script>
 <link rel="stylesheet" href="styles.css"></head>
 <body style="background-image">
+        <div class="topnav" id="myTopnav">
+                <a href="#home" class="active">Home</a>
+                <a href="#news">News</a>
+                <a href="#contact">Contact</a>
+                <a href="#about">About</a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                  <i class="fa fa-bars"></i>
+                </a>
+              </div>
 <div class="header">
 <p><img src="images\hiking_2.png"><img src="images\track.png"><img src="images\chopsticks.png"><img src="images\reading-book.png"></p>
 <P>California Uncovered: Hiking, Cycling, and Savoring SoCal</P>
 </div>
 <h1>In Progress</h1>
-<img src="images\img_ontario.jpg" style="max-width: 100%" >
+<div class="row">
+        <div class="column">
+          <img src="images\trail_1.jpg" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="images\trail_2.jpg" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="images\trail_3.jpg" style="width:100%">
+        </div>
+        <div class="column">
+                <img src="images\trail_4.jpg" style="width:100%">
+              </div>
+              <div class="column">
+                <img src="images\trail_5.jpg" style="width:100%">
+              </div>
+              <div class="column">
+                <img src="images\cycle_1.jpg" style="width:100%">
+              </div>
+      </div>
 <hr>
 <sup id="fn1">1. Hiking icons created by Smashicons - Flaticon<a href="https://www.flaticon.com/free-icons/hiking" title="hiking icons">↩</a></sup>
 <sup id="fn2">2. Book icons created by Freepik - Flaticon<a href="https://www.flaticon.com/free-icons/book" title="book icons">↩</a></sup>
