--- a/index.html
+++ b/index.html
@@ -40,9 +40,28 @@
                 <img src="images\trail_5.jpg" style="width:100%">
               </div>
               <div class="column">
-                <img src="images\cycle_1.jpg" style="width:100%">
+                <img src="images\trail_6.jpg" style="width:100%">
               </div>
       </div>
+      <div class="column">
+            <img src="images\trail_7.jpg" style="width:100%">
+          </div>
+          <div class="column">
+            <img src="images\cycle_1.jpg" style="width:100%">
+          </div>
+          <div class="column">
+            <img src="images\cycle_2.jpg" style="width:100%">
+          </div>
+          <div class="column">
+                <img src="images\food_1.jpg" style="width:100%">
+              </div>
+              <div class="column">
+                <img src="images\food_2.jpg" style="width:100%">
+              </div>
+              <div class="column">
+                <img src="images\food_3.jpg" style="width:100%">
+              </div>
+  </div>
 <hr>
 <sup id="fn1">1. Hiking icons created by Smashicons - Flaticon<a href="https://www.flaticon.com/free-icons/hiking" title="hiking icons">↩</a></sup>
 <sup id="fn2">2. Book icons created by Freepik - Flaticon<a href="https://www.flaticon.com/free-icons/book" title="book icons">↩</a></sup>
