--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="styles.css"></head>
 <body style="background-image">
         <div class="topnav" id="myTopnav">
-                <a href="#home" class="active">Home</a>
+                <a href="index.html" class="active">Home</a>
                 <a href="#news">News</a>
                 <a href="tool.html">Tool</a>
                 <a href="#about">About</a>
