--- a/index_old.html
+++ b/index_old.html
@@ -11,7 +11,7 @@
 <body style="background-image">
         <div class="topnav" id="myTopnav">
                 <a href="index.html" class="active">Home</a>
-                <a href="gallery.html">Gallery</a>
+                <a href="#news">News</a>
                 <a href="tool.html">Tool</a>
                 <a href="#about">About</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -22,13 +22,46 @@
 <p><img src="images\hiking_2.png"><img src="images\track.png"><img src="images\chopsticks.png"><img src="images\reading-book.png"></p>
 <P>California Uncovered: Hiking, Cycling, and Savoring SoCal</P>
 </div>
-<center>
-<h1>2023 Activities</h1>
-<h3>Hiking</h3>
-<hr style="border: none; border-top: 2px dotted black" />
-<div class="strava-embed-placeholder" data-embed-type="activity" data-embed-id="9816957735"></div><script src="https://strava-embeds.com/embed.js"></script>
-
-</center>
+<h1>In Progress</h1>
+<div class="row">
+        <div class="column">
+          <img src="images\trail_1.jpg" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="images\trail_2.jpg" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="images\trail_3.jpg" style="width:100%">
+        </div>
+        <div class="column">
+                <img src="images\trail_4.jpg" style="width:100%">
+              </div>
+              <div class="column">
+                <img src="images\trail_5.jpg" style="width:100%">
+              </div>
+              <div class="column">
+                <img src="images\trail_6.jpg" style="width:100%">
+              </div>
+      </div>
+      <div class="column">
+            <img src="images\trail_7.jpg" style="width:100%">
+          </div>
+          <div class="column">
+            <img src="images\cycle_1.jpg" style="width:100%">
+          </div>
+          <div class="column">
+            <img src="images\cycle_2.jpg" style="width:100%">
+          </div>
+          <div class="column">
+                <img src="images\food_1.jpg" style="width:100%">
+              </div>
+              <div class="column">
+                <img src="images\food_2.jpg" style="width:100%">
+              </div>
+              <div class="column">
+                <img src="images\food_3.jpg" style="width:100%">
+              </div>
+  </div>
 <hr>
 <sup id="fn1">1. Hiking icons created by Smashicons - Flaticon<a href="https://www.flaticon.com/free-icons/hiking" title="hiking icons">↩</a></sup>
 <sup id="fn2">2. Book icons created by Freepik - Flaticon<a href="https://www.flaticon.com/free-icons/book" title="book icons">↩</a></sup>
