--- a/gallery.html
+++ b/gallery.html
@@ -9,15 +9,12 @@
     <script src="myScript.js"></script>
     <link rel="stylesheet" href="styles.css"></head>
     <body style="background-image">
-            <div class="topnav" id="myTopnav">
-                    <a href="index.html" class="active">Home</a>
-                    <a href="#news">News</a>
-                    <a href="tool.html">Tool</a>
-                    <a href="#about">About</a>
-                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                      <i class="fa fa-bars"></i>
-                    </a>
-                  </div>
+      <div class="topnav" id="myTopnav">
+        <a href="index.html" class="active">Home</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="tool.html">Tool</a>
+        <a href="#about">About</a>
+      </div>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,6 +32,15 @@
 </head>
 <div class="row">
     <div class="column">
+      <img src="images\food_4.jpg" style="width:100%">
+    </div>
+    <div class="column">
+      <img src="images\josephine_2.jpg" style="width:100%">
+    </div>
+    <div class="column">
+      <img src="images\josephine_3.jpg" style="width:100%">
+    </div>
+    <div class="column">
       <img src="images\trail_1.jpg" style="width:100%">
     </div>
     <div class="column">
@@ -44,32 +50,31 @@
       <img src="images\trail_3.jpg" style="width:100%">
     </div>
     <div class="column">
-            <img src="images\trail_4.jpg" style="width:100%">
-          </div>
-          <div class="column">
-            <img src="images\trail_5.jpg" style="width:100%">
-          </div>
-          <div class="column">
-            <img src="images\trail_6.jpg" style="width:100%">
-          </div>
-  </div>
-  <div class="column">
-        <img src="images\trail_7.jpg" style="width:100%">
-      </div>
-      <div class="column">
+      <img src="images\trail_4.jpg" style="width:100%">
+    </div>
+    <div class="column">
+      <img src="images\trail_5.jpg" style="width:100%">
+    </div>
+    <div class="column">
+        <img src="images\trail_6.jpg" style="width:100%">
+    </div>
+    <div class="column">
+       <img src="images\trail_7.jpg" style="width:100%">
+    </div>
+    <div class="column">
         <img src="images\cycle_1.jpg" style="width:100%">
-      </div>
-      <div class="column">
+    </div>
+    <div class="column">
         <img src="images\cycle_2.jpg" style="width:100%">
-      </div>
-      <div class="column">
-            <img src="images\food_1.jpg" style="width:100%">
-          </div>
-          <div class="column">
-            <img src="images\food_2.jpg" style="width:100%">
-          </div>
-          <div class="column">
-            <img src="images\food_3.jpg" style="width:100%">
-          </div>
+    </div>
+    <div class="column">
+        <img src="images\food_1.jpg" style="width:100%">
+    </div>
+    <div class="column">
+        <img src="images\food_2.jpg" style="width:100%">
+    </div>
+    <div class="column">
+        <img src="images\food_3.jpg" style="width:100%">
+    </div>
 </div>
 </html>
