--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Decide What to Eat</title>
+    <title>Gallery</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -31,6 +31,15 @@
     </style>
 </head>
 <div class="row">
+      <div class="column">
+        <img src="images\telegraph_peak_2.jpg" style="width:100%">
+    </div>
+    <div class="column">
+        <img src="images\telegraph_peak.jpg" style="width:100%">
+    </div>
+    <div class="column">
+        <img src="images\telegraph_peak_3.jpg" style="width:100%">
+    </div>
     <div class="column">
       <img src="images\food_4.jpg" style="width:100%">
     </div>
