--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
           <img src="images\telegraph_peak.jpg" />
         </div>
       </div>
+      <p>Trail Map</p>
+      <iframe
+        src="https://www.google.com/maps/d/u/0/embed?mid=1JeMQ8FG4bmYZ8hwaFDzv3PELpznkhzg&ehbc=2E312F"
+        width="640"
+        height="480"
+      ></iframe>
       <hr style="border: none; border-top: 2px dotted black" />
       <div class="content">
         <div class="text">
@@ -86,11 +92,35 @@
       </div>
       <p>Trail Map</p>
       <iframe
-        src="https://www.google.com/maps/d/embed?mid=1GUbr3dATsEN7JpbeFlbMSlp2T2tisiM&ehbc=2E312F&noprof=1"
+        src="https://www.google.com/maps/d/u/0/embed?mid=1rsP9rXr0P40DdYo1X6xm2E-wSleN4bo&ehbc=2E312F"
         width="640"
         height="480"
       ></iframe>
       <hr style="border: none; border-top: 2px dotted black" />
+      <div class="content">
+        <div class="text">
+          <h6>
+            <a
+              href="https://www.alltrails.com/trail/us/california/ontario-peak--3"
+              ><i class="bi bi-caret-right"></i>Ontario Peak and Baldy Notch</a
+            >
+          </h6>
+          <p>
+            Length: 13.23 mi<br />Elevation Gain: 3,941 ft<br />Route Type:
+            Out&Back<br />Difficultiy: Hard<br />Time: 5:53<br />Parking: Easy
+            (Adventure Pass required)
+          </p>
+        </div>
+        <div class="image">
+          <img src="images\trail_3.jpg" />
+        </div>
+      </div>
+      <p>Trail Map</p>
+      <iframe
+        src="https://www.google.com/maps/d/u/0/embed?mid=1N9qS0hJMJ6MNWVYfPT2ys_yBXZTG6nw&ehbc=2E312F"
+        width="640"
+        height="480"
+      ></iframe>
     </div>
     <hr />
     <sup id="fn1"
