--- a/index.html
+++ b/index.html
@@ -45,6 +45,33 @@
     <div class="main">
       <h1>2023 Activities</h1>
       <br /><br />
+      <h3><i class="bi bi-diamond"></i> Cycling</h3>
+      <div class="content">
+        <div class="text">
+          <h6>
+            <a href="https://www.626goldenstreets.com/"
+              ><i class="bi bi-caret-right"></i>ArroyoFest - Cycling on the 110
+              Freeway</a
+            >
+          </h6>
+          <p>
+            Length: 13.16 mi<br />Elevation Gain: 512ft<br />Route Type:
+            Out&Back<br />Difficultiy: Easy<br />Time: 1:49<br />Parking: Public
+            Parking
+          </p>
+        </div>
+        <div class="image">
+          <img src="images\PXL_20231029_163622039.jpg" />
+        </div>
+      </div>
+      <p>Trail Map</p>
+      <iframe
+        src="https://www.google.com/maps/d/u/0/embed?mid=1kqJGOWc4XEfKA8MDHYHOpydHcTw7if4&ehbc=2E312F"
+        width="640"
+        height="480"
+      ></iframe>
+      <hr style="border: none; border-top: 2px dotted black" />
+      <br /><br />
       <h3><i class="bi bi-diamond"></i> Hiking</h3>
       <div class="content">
         <div class="text">
